# IA-BioSoftware-Atelier_TB

./: .coverage  README.md  burger_orders.txt  pyproject.toml
UNKNOWN.egg-info/: SOURCES.txt
developpement-logiciel/: burger.py
developpement_logiciel/: burger.py
myproject.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_burger.py
