[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myproject"
version = "0.1.0"
description = "My awesome project"
requires-python = ">=3.11"

dependencies = [
    "ruff",
    "bandit",
    "safety",
    "pytest",
    "pytest-cov",
    "pyyaml>=6.0",
]

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["."]
include = ["developpement_logiciel"]

[tool.pytest.ini_options]
pythonpath = "."

[tool.ruff.lint]
select = ["S", "R", "RET", "Q", "F", "I", "N", "E", "W", "D", "COM", "LOG", "G", "T20", "PYI", "PT"]
ignore = ["E501", "N818", "D100", "D104", "PT009", "PT027", "D212", "D203", "S105", "COM812", "D417"]
